# wildfly-openssl

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pom.xml
.github/workflows/: pr-ci.yaml
combined/: pom.xml
el6-i386/: Makefile  pom.xml
el6-x86_64/: Makefile  pom.xml
el7-x86_64/: Makefile  pom.xml
el8-x86_64/: Makefile  pom.xml
java/: pom.xml
java/src/test/resources/: client-dsa.truststore  client-ec.keystore  client-ec.truststore  server-dsa.keystore  server-ec.keystore  server.crt  (+2 more)
libutssl/: CMakeLists.txt  Makefile
libutssl/include/: tcn.h  utssl.h  utssl_private.h
libutssl/src/: alpn.c  clientcert.c  options.c  session.c  ssl.c  threads.c  util.c
libwfssl/: CMakeLists.txt  WindowsMakefile
libwfssl/include/: wfssl.h
libwfssl/src/: alpn.c  clientcert.c  options.c  session.c  ssl.c  threads.c  util.c
linux/: Makefile  pom.xml
linux-aarch64/: Makefile  pom.xml
linux-i386/: Makefile  pom.xml
linux-i686/: Makefile  pom.xml
linux-ppc64le/: Makefile  pom.xml
linux-rhel6-i386/: Makefile  pom.xml
linux-rhel6-x86_64/: Makefile  pom.xml
linux-rhel7-x86_64/: Makefile  pom.xml
linux-rhel8-x86_64/: Makefile  pom.xml
linux-s390x/: Makefile  pom.xml
linux-x86_64/: Makefile  pom.xml
mac/: Makefile  pom.xml
macosx-x86_64/: Makefile  pom.xml
solaris/: pom.xml
solaris-sparcv9/: Makefile  pom.xml
solaris-x86_64/: Makefile  pom.xml
src/test/resources/: server.key
windows/: Makefile  pom.xml
windows-i386/: Makefile  pom.xml
windows-i686/: Makefile  pom.xml
windows-x86_64/: Makefile  pom.xml
(+123 files in other folders)
